Bug 442557 - Cannot edit size by typing on Wayland
Summary: Cannot edit size by typing on Wayland
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: git-master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-16 20:14 UTC by Thiago Sueto
Modified: 2021-09-20 16:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Sueto 2021-09-16 20:14:43 UTC
On the X11 session, when editing the panel, I'm able to manually edit the numbers in the spinbox for the panel size, even if the cursor doesn't show up.

On Wayland, I cannot.

I'm unsure if it's by design and the behavior on X11 is a bug or if it's not by design and the behavior on Wayland is a bug. Regardless: IMO, this inconsistency indicates a bug somewhere.
Comment 1 Bug Janitor Service 2021-09-17 23:44:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1069
Comment 2 David Edmundson 2021-09-18 13:18:02 UTC
Git commit 89edf22e80026377f5a1e22a52efedf00e7f3674 by David Edmundson.
Committed on 17/09/2021 at 23:43.
Pushed by davidedmundson into branch 'master'.

[shell/panel] Fix ability to type in textfield

On wayland the setFlags call does nothing, metadata for interaction is
set through the ShellSurface, by default this does not have focus for
panels.

M  +1    -0    shell/panelconfigview.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/89edf22e80026377f5a1e22a52efedf00e7f3674
Comment 3 David Edmundson 2021-09-18 13:18:27 UTC
Git commit 078626cdc2aa9fe7d95d671c5ea8d8d2da8d5306 by David Edmundson.
Committed on 18/09/2021 at 13:18.
Pushed by davidedmundson into branch 'Plasma/5.23'.

[shell/panel] Fix ability to type in textfield

On wayland the setFlags call does nothing, metadata for interaction is
set through the ShellSurface, by default this does not have focus for
panels.


(cherry picked from commit 89edf22e80026377f5a1e22a52efedf00e7f3674)

M  +1    -0    shell/panelconfigview.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/078626cdc2aa9fe7d95d671c5ea8d8d2da8d5306