[shell/panel] Fix ability to type in textfield

On wayland the setFlags call does nothing, metadata for interaction is
set through the ShellSurface, by default this does not have focus for
panels.

BUG: 442557